[gd_scene load_steps=8 format=3 uid="uid://cxq2plains02tile"]

[ext_resource type="Script" path="res://scripts/generation/wilderness_tile.gd" id="1"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_ground"]
albedo_color = Color(0.48, 0.44, 0.3, 1)
roughness = 0.95

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_rock"]
albedo_color = Color(0.52, 0.5, 0.44, 1)
roughness = 0.9

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_grass"]
albedo_color = Color(0.38, 0.52, 0.28, 1)
roughness = 0.85

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_hay"]
albedo_color = Color(0.65, 0.55, 0.3, 1)
roughness = 0.9

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_wood"]
albedo_color = Color(0.4, 0.28, 0.18, 1)
roughness = 0.85

[sub_resource type="BoxShape3D" id="BoxShape3D_ground"]
size = Vector3(100, 1, 100)

[node name="WildernessTile_Plains_02" type="Node3D"]
script = ExtResource("1")
biome = "plains"
variant = 2
danger_level = 0.9

[node name="Terrain" type="Node3D" parent="."]

[node name="Ground" type="CSGBox3D" parent="Terrain"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.5, 0)
use_collision = true
size = Vector3(100, 1, 100)
material = SubResource("StandardMaterial3D_ground")

[node name="GroundCollision" type="StaticBody3D" parent="Terrain"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.5, 0)

[node name="CollisionShape3D" type="CollisionShape3D" parent="Terrain/GroundCollision"]
shape = SubResource("BoxShape3D_ground")

[node name="TerrainFeatures" type="Node3D" parent="Terrain"]

[node name="GentleSlope" type="CSGBox3D" parent="Terrain/TerrainFeatures"]
transform = Transform3D(0.985, 0, -0.174, 0, 1, 0, 0.174, 0, 0.985, -20, 0.25, 25)
use_collision = true
size = Vector3(18, 0.8, 14)
material = SubResource("StandardMaterial3D_ground")

[node name="Props" type="Node3D" parent="."]

[node name="GrassClump_01" type="CSGBox3D" parent="Props"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 12, 0.45, 12)
size = Vector3(1.6, 0.9, 1.4)
material = SubResource("StandardMaterial3D_grass")

[node name="GrassClump_02" type="CSGBox3D" parent="Props"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -15, 0.4, -18)
size = Vector3(1.4, 0.8, 1.5)
material = SubResource("StandardMaterial3D_grass")

[node name="GrassClump_03" type="CSGBox3D" parent="Props"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 30, 0.35, -8)
size = Vector3(1.3, 0.7, 1.2)
material = SubResource("StandardMaterial3D_grass")

[node name="GrassClump_04" type="CSGBox3D" parent="Props"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -32, 0.5, 10)
size = Vector3(1.7, 1.0, 1.6)
material = SubResource("StandardMaterial3D_grass")

[node name="HayBale_01" type="CSGCylinder3D" parent="Props"]
transform = Transform3D(1, 0, 0, 0, 0, 1, 0, -1, 0, 18, 0.6, -25)
use_collision = true
radius = 0.6
height = 1.2
sides = 12
material = SubResource("StandardMaterial3D_hay")

[node name="HayBale_02" type="CSGCylinder3D" parent="Props"]
transform = Transform3D(1, 0, 0, 0, 0, 1, 0, -1, 0, 20, 0.6, -24)
use_collision = true
radius = 0.6
height = 1.2
sides = 12
material = SubResource("StandardMaterial3D_hay")

[node name="HayBale_03" type="CSGCylinder3D" parent="Props"]
transform = Transform3D(1, 0, 0, 0, 0, 1, 0, -1, 0, 19, 1.4, -24.5)
use_collision = true
radius = 0.6
height = 1.2
sides = 12
material = SubResource("StandardMaterial3D_hay")

[node name="FencePost_01" type="CSGBox3D" parent="Props"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -8, 0.6, 35)
use_collision = true
size = Vector3(0.2, 1.2, 0.2)
material = SubResource("StandardMaterial3D_wood")

[node name="FencePost_02" type="CSGBox3D" parent="Props"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -5, 0.6, 35)
use_collision = true
size = Vector3(0.2, 1.2, 0.2)
material = SubResource("StandardMaterial3D_wood")

[node name="FenceRail" type="CSGBox3D" parent="Props"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -6.5, 0.8, 35)
size = Vector3(3.5, 0.1, 0.08)
material = SubResource("StandardMaterial3D_wood")

[node name="SmallRock_01" type="CSGBox3D" parent="Props"]
transform = Transform3D(0.94, 0, 0.342, 0, 1, 0, -0.342, 0, 0.94, 35, 0.3, 20)
use_collision = true
size = Vector3(1.0, 0.6, 0.7)
material = SubResource("StandardMaterial3D_rock")

[node name="SmallRock_02" type="CSGBox3D" parent="Props"]
transform = Transform3D(0.866, 0, -0.5, 0, 1, 0, 0.5, 0, 0.866, -38, 0.25, -30)
use_collision = true
size = Vector3(0.8, 0.5, 0.6)
material = SubResource("StandardMaterial3D_rock")

[node name="Spawns" type="Node3D" parent="."]

[node name="EnemySpawn_01" type="Node3D" parent="Spawns"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 30, 0.5, 15)

[node name="EnemySpawn_02" type="Node3D" parent="Spawns"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -25, 0.5, -20)

[node name="EnemySpawn_03" type="Node3D" parent="Spawns"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 10, 0.5, -35)

[node name="EnemySpawn_04" type="Node3D" parent="Spawns"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -35, 0.5, 30)

[node name="EnemySpawn_05" type="Node3D" parent="Spawns"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, 0)

[node name="Exits" type="Node3D" parent="."]

[node name="Exit_North" type="Node3D" parent="Exits"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, -48)

[node name="Exit_South" type="Node3D" parent="Exits"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, 48)

[node name="Exit_East" type="Node3D" parent="Exits"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 48, 0.5, 0)

[node name="Exit_West" type="Node3D" parent="Exits"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -48, 0.5, 0)

[node name="POIs" type="Node3D" parent="."]

[node name="MerchantSpawn" type="Node3D" parent="POIs"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 15, 0.5, -20)

[node name="Lights" type="Node3D" parent="."]

[node name="AmbientLight" type="DirectionalLight3D" parent="Lights"]
transform = Transform3D(0.866, -0.354, 0.354, 0, 0.707, 0.707, -0.5, -0.612, 0.612, 0, 20, 0)
light_color = Color(1, 0.95, 0.85, 1)
light_energy = 0.8
shadow_enabled = true
